--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one column" style="margin-top: 25%">
+      <div class="four columns offset-by-four" style="margin-top: 25%">
         <h1>Shotglas Co.<h1>
       </div>
     </div>
